@@ -49,7 +49,7 @@ struct _TnyCamelAccountClass
 	GObjectClass parent;
 
 	/* This is an abstract method (it's not implemented by 
-	TnyCamelAccount, it's also not virtual) */
+	   TnyCamelAccount, it's also not virtual) */
 
 	void (*reconnect_func) (TnyCamelAccount *self);
 };
